--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
         </activity>
         <activity android:name=".PotentialActivity"></activity>
         <activity android:name=".SearchActivity"></activity>
+        <activity android:name=".ScrollActivity"></activity>
     </application>
 
 </manifest>
