--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,6 +18,8 @@
         <activity android:name=".PotentialActivity"></activity>
         <activity android:name=".SearchActivity"></activity>
         <activity android:name=".ScrollActivity"></activity>
+
+        <activity android:name=".SelectBasicScollPopup" android:theme="@android:style/Theme.Dialog"></activity>
     </application>
 
 </manifest>
