--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,4 +35,6 @@ dependencies {
 
     implementation 'com.github.bumptech.glide:glide:3.6.0'
 
+    implementation 'com.google.android.gms:play-services-ads:20.2.0'
+
 }
