--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,4 +37,6 @@ dependencies {
 
     implementation 'com.google.android.gms:play-services-ads:20.2.0'
 
+    implementation  'com.google.code.gson:gson:2.8.1'
+
 }
