--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
 
         <activity android:name=".SelectBasicScollPopup" android:theme="@android:style/Theme.Dialog"/>
         <activity android:name=".EquipmentPopup" android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name=".UsedPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
 
 
         <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
