--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,11 +22,10 @@
         <activity android:name=".StarforceActivity"/>
         <activity android:name=".InvenActivity"/>
 
-        <activity android:name=".SelectBasicScollPopup" android:theme="@android:style/Theme.Dialog"/>
-        <activity android:name=".EquipmentPopup" android:theme="@android:style/Theme.Dialog"/>
-        <activity android:name=".EquipmentPopup2" android:theme="@android:style/Theme.Dialog"/>
+        <activity android:name=".SelectBasicScollPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity android:name=".EquipmentPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity android:name=".EquipmentPopup2" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".UsedPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
-
 
         <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
