--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,6 +25,7 @@
         <activity android:name=".InvenActivity"/>
         <activity android:name=".InfoActivity"/>
         <activity android:name=".InfoActivityForInven"/>
+        <activity android:name=".EquipActivity"/>
 
         <activity android:name=".SelectBasicScollPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".SelectCubeAutoPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
