--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -29,6 +29,7 @@
         <activity android:name=".EquipActivity"/>
         <activity android:name=".StatInfoActivity"/>
         <activity android:name=".ChracterListActivity"/>
+        <activity android:name=".StatSettingActivity"/>
 
         <activity android:name=".SelectBasicScollPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".SelectCubeAutoPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
