--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,6 +35,7 @@
         <activity android:name=".SelectCubeAutoPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".UsedPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
         <activity android:name=".InputPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
+        <activity android:name=".SetNumberPopup" android:theme="@style/Theme.AppCompat.Light.Dialog"/>
 
         <!-- Sample AdMob app ID: ca-app-pub-3940256099942544~3347511713 -->
         <meta-data
